pp/pp/ArabicLangParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from ArabicLang.g4 by ANTLR 4.7.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7.2")]
[System.CLSCompliant(false)]
public partial class ArabicLangParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		KW_PROGRAM=1, KW_CONST=2, KW_TYPE=3, KW_RECORD=4, KW_LIST=5, KW_VAR=6, 
		KW_PROC=7, KW_BY_VALUE=8, KW_BY_REF=9, KW_INTEGER=10, KW_REAL=11, KW_BOOLEAN=12, 
		KW_CHAR=13, KW_STRING=14, KW_PRINT=15, KW_READ=16, KW_IF=17, KW_THEN=18, 
		KW_ELSE=19, KW_REPEAT=20, KW_FOR=21, KW_ADD=22, KW_WHILE=23, KW_CONTINUE=24, 
		KW_DO=25, KW_UNTIL=26, KW_FROM=27, KW_RETURN=28, DOT=29, COLON=30, SEMICOLON=31, 
		COMMA=32, ASSIGN=33, LBRACE=34, RBRACE=35, LBRACK=36, RBRACK=37, LPAREN=38, 
		RPAREN=39, OP_LT=40, OP_GT=41, OP_LE=42, OP_GE=43, OP_EQ=44, OP_NE=45, 
		OP_PLUS=46, OP_MINUS=47, OP_OR=48, OP_POWER=49, OP_MULT=50, OP_DIV_REAL=51, 
		OP_DIV_INT=52, OP_MOD=53, OP_AND=54, OP_NOT=55, NAME_ID=56, BOOLEAN_LITERAL=57, 
		NUMERIC_LITERAL=58, REAL_NUM=59, INTEGER_NUM=60, STRING_LITERAL=61, WS=62;
	public const int
		RULE_program = 0, RULE_block = 1, RULE_definitions_part = 2, RULE_consts_def_part = 3, 
		RULE_const_def = 4, RULE_types_def_part = 5, RULE_type_def = 6, RULE_complex_type = 7, 
		RULE_list_type = 8, RULE_record_type = 9, RULE_fields_list = 10, RULE_field_def = 11, 
		RULE_vars_def_part = 12, RULE_var_def = 13, RULE_vars_group = 14, RULE_procs_def_part = 15, 
		RULE_proc_def = 16, RULE_proc_header = 17, RULE_proc_block = 18, RULE_formal_params_list = 19, 
		RULE_param_def = 20, RULE_data_type = 21, RULE_stmtList = 22, RULE_statement = 23, 
		RULE_conditional_stmt = 24, RULE_repetition_stmt = 25, RULE_repeat_for_stmt = 26, 
		RULE_repetition_range = 27, RULE_repeat_while_stmt = 28, RULE_repeat_until_stmt = 29, 
		RULE_assign_stmt = 30, RULE_input_stmt = 31, RULE_output_stmt = 32, RULE_print_list = 33, 
		RULE_print_element = 34, RULE_call_stmt = 35, RULE_actual_params_list = 36, 
		RULE_actual_param = 37, RULE_expression = 38, RULE_factor = 39, RULE_var_access = 40, 
		RULE_selector = 41, RULE_indexed_selector = 42, RULE_field_selector = 43, 
		RULE_const_value = 44;
	public static readonly string[] ruleNames = {
		"program", "block", "definitions_part", "consts_def_part", "const_def", 
		"types_def_part", "type_def", "complex_type", "list_type", "record_type", 
		"fields_list", "field_def", "vars_def_part", "var_def", "vars_group", 
		"procs_def_part", "proc_def", "proc_header", "proc_block", "formal_params_list", 
		"param_def", "data_type", "stmtList", "statement", "conditional_stmt", 
		"repetition_stmt", "repeat_for_stmt", "repetition_range", "repeat_while_stmt", 
		"repeat_until_stmt", "assign_stmt", "input_stmt", "output_stmt", "print_list", 
		"print_element", "call_stmt", "actual_params_list", "actual_param", "expression", 
		"factor", "var_access", "selector", "indexed_selector", "field_selector", 
		"const_value"
	};

	private static readonly string[] _LiteralNames = {
		null, "'\u0628\u0631\u0646\u0627\u0645\u062C'", "'\u062B\u0627\u0628\u062A'", 
		"'\u0646\u0648\u0639'", "'\u0633\u062C\u0644'", "'\u0642\u0627\u0626\u0645\u0629'", 
		"'\u0645\u062A\u063A\u064A\u0631'", "'\u0627\u062C\u0631\u0627\u0621'", 
		"'\u0628\u0627\u0644\u0642\u064A\u0645\u0629'", "'\u0628\u0627\u0644\u0645\u0631\u062C\u0639'", 
		"'\u0635\u062D\u064A\u062D'", "'\u062D\u0642\u064A\u0642\u064A'", "'\u0645\u0646\u0637\u0642\u064A'", 
		"'\u062D\u0631\u0641\u064A'", "'\u062E\u064A\u0637 \u0631\u0645\u0632\u064A'", 
		"'\u0627\u0637\u0628\u0639'", "'\u0627\u0642\u0631\u0623'", "'\u0627\u0630\u0627'", 
		"'\u0641\u0627\u0646'", "'\u0648\u0627\u0644\u0627'", "'\u0643\u0631\u0631'", 
		"'\u0627\u0644\u0649'", "'\u0627\u0636\u0641'", "'\u0637\u0627\u0644\u0645\u0627'", 
		"'\u0627\u0633\u062A\u0645\u0631'", "'\u0627\u0639\u062F'", "'\u062D\u062A\u0649'", 
		"'\u0645\u0646'", null, "'.'", "':'", null, "','", "'='", "'{'", "'}'", 
		"'['", "']'", "'('", "')'", "'<'", "'>'", null, null, "'=='", null, "'+'", 
		"'-'", "'||'", "'^'", "'*'", "'/'", "'\\'", "'%'", "'&&'", "'!'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "KW_PROGRAM", "KW_CONST", "KW_TYPE", "KW_RECORD", "KW_LIST", "KW_VAR", 
		"KW_PROC", "KW_BY_VALUE", "KW_BY_REF", "KW_INTEGER", "KW_REAL", "KW_BOOLEAN", 
		"KW_CHAR", "KW_STRING", "KW_PRINT", "KW_READ", "KW_IF", "KW_THEN", "KW_ELSE", 
		"KW_REPEAT", "KW_FOR", "KW_ADD", "KW_WHILE", "KW_CONTINUE", "KW_DO", "KW_UNTIL", 
		"KW_FROM", "KW_RETURN", "DOT", "COLON", "SEMICOLON", "COMMA", "ASSIGN", 
		"LBRACE", "RBRACE", "LBRACK", "RBRACK", "LPAREN", "RPAREN", "OP_LT", "OP_GT", 
		"OP_LE", "OP_GE", "OP_EQ", "OP_NE", "OP_PLUS", "OP_MINUS", "OP_OR", "OP_POWER", 
		"OP_MULT", "OP_DIV_REAL", "OP_DIV_INT", "OP_MOD", "OP_AND", "OP_NOT", 
		"NAME_ID", "BOOLEAN_LITERAL", "NUMERIC_LITERAL", "REAL_NUM", "INTEGER_NUM", 
		"STRING_LITERAL", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "ArabicLang.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static ArabicLangParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public ArabicLangParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public ArabicLangParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		public ITerminalNode KW_PROGRAM() { return GetToken(ArabicLangParser.KW_PROGRAM, 0); }
		public ITerminalNode NAME_ID() { return GetToken(ArabicLangParser.NAME_ID, 0); }
		public ITerminalNode SEMICOLON() { return GetToken(ArabicLangParser.SEMICOLON, 0); }
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public ITerminalNode DOT() { return GetToken(ArabicLangParser.DOT, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		public override void EnterRule(IParseTreeListener listener) {
			IArabicLangListener typedListener = listener as IArabicLangListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IArabicLangListener typedListener = listener as IArabicLangListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IArabicLangVisitor<TResult> typedVisitor = visitor as IArabicLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 90; Match(KW_PROGRAM);
			State = 91; Match(NAME_ID);
			State = 92; Match(SEMICOLON);
			State = 93; block();
			State = 94; Match(DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BlockContext : ParserRuleContext {
		public ITerminalNode LBRACE() { return GetToken(ArabicLangParser.LBRACE, 0); }
		public StmtListContext stmtList() {
			return GetRuleContext<StmtListContext>(0);
		}
		public ITerminalNode RBRACE() { return GetToken(ArabicLangParser.RBRACE, 0); }
		public Definitions_partContext definitions_part() {
			return GetRuleContext<Definitions_partContext>(0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_block; } }
		public override void EnterRule(IParseTreeListener listener) {
			IArabicLangListener typedListener = listener as IArabicLangListener;
			if (typedListener != null) typedListener.EnterBlock(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IArabicLangListener typedListener = listener as IArabicLangListener;
			if (typedListener != null) typedListener.ExitBlock(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IArabicLangVisitor<TResult> typedVisitor = visitor as IArabicLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BlockContext block() {
		BlockContext _localctx = new BlockContext(Context, State);
		EnterRule(_localctx, 2, RULE_block);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 96; Match(LBRACE);
			State = 98;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << KW_CONST) | (1L << KW_TYPE) | (1L << KW_VAR) | (1L << KW_PROC))) != 0)) {
				{
				State = 97; definitions_part();
				}
			}

			State = 100; stmtList();
			State = 101; Match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Definitions_partContext : ParserRuleContext {
		public Consts_def_partContext[] consts_def_part() {
			return GetRuleContexts<Consts_def_partContext>();
		}
		public Consts_def_partContext consts_def_part(int i) {
			return GetRuleContext<Consts_def_partContext>(i);
		}
		public Types_def_partContext[] types_def_part() {
			return GetRuleContexts<Types_def_partContext>();
		}
		public Types_def_partContext types_def_part(int i) {
			return GetRuleContext<Types_def_partContext>(i);
		}
		public Vars_def_partContext[] vars_def_part() {
			return GetRuleContexts<Vars_def_partContext>();
		}
		public Vars_def_partContext vars_def_part(int i) {
			return GetRuleContext<Vars_def_partContext>(i);
		}
		public Procs_def_partContext[] procs_def_part() {
			return GetRuleContexts<Procs_def_partContext>();
		}
		public Procs_def_partContext procs_def_part(int i) {
			return GetRuleContext<Procs_def_partContext>(i);
		}
		public Definitions_partContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_definitions_part; } }
		public override void EnterRule(IParseTreeListener listener) {
			IArabicLangListener typedListener = listener as IArabicLangListener;
			if (typedListener != null) typedListener.EnterDefinitions_part(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IArabicLangListener typedListener = listener as IArabicLangListener;
			if (typedListener != null) typedListener.ExitDefinitions_part(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IArabicLangVisitor<TResult> typedVisitor = visitor as IArabicLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDefinitions_part(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Definitions_partContext definitions_part() {
		Definitions_partContext _localctx = new Definitions_partContext(Context, State);
		EnterRule(_localctx, 4, RULE_definitions_part);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 107;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				State = 107;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case KW_CONST:
					{
					State = 103; consts_def_part();
					}
					break;
				case KW_TYPE:
					{
					State = 104; types_def_part();
					}
					break;
				case KW_VAR:
					{
					State = 105; vars_def_part();
					}
					break;
				case KW_PROC:
					{
					State = 106; procs_def_part();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 109;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << KW_CONST) | (1L << KW_TYPE) | (1L << KW_VAR) | (1L << KW_PROC))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Consts_def_partContext : ParserRuleContext {
		public ITerminalNode KW_CONST() { return GetToken(ArabicLangParser.KW_CONST, 0); }
		public Const_defContext[] const_def() {
			return GetRuleContexts<Const_defContext>();
		}
		public Const_defContext const_def(int i) {
			return GetRuleContext<Const_defContext>(i);
		}
		public Consts_def_partContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_consts_def_part; } }
		public override void EnterRule(IParseTreeListener listener) {
			IArabicLangListener typedListener = listener as IArabicLangListener;
			if (typedListener != null) typedListener.EnterConsts_def_part(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IArabicLangListener typedListener = listener as IArabicLangListener;
			if (typedListener != null) typedListener.ExitConsts_def_part(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IArabicLangVisitor<TResult> typedVisitor = visitor as IArabicLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConsts_def_part(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Consts_def_partContext consts_def_part() {
		Consts_def_partContext _localctx = new Consts_def_partContext(Context, State);
		EnterRule(_localctx, 6, RULE_consts_def_part);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 111; Match(KW_CONST);
			State = 113;
			ErrorHandler.Sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					State = 112; const_def();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 115;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,3,Context);
			} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Const_defContext : ParserRuleContext {
		public ITerminalNode NAME_ID() { return GetToken(ArabicLangParser.NAME_ID, 0); }
		public ITerminalNode ASSIGN() { return GetToken(ArabicLangParser.ASSIGN, 0); }
		public Const_valueContext const_value() {
			return GetRuleContext<Const_valueContext>(0);
		}
		public ITerminalNode SEMICOLON() { return GetToken(ArabicLangParser.SEMICOLON, 0); }
		public Const_defContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_const_def; } }
		public override void EnterRule(IParseTreeListener listener) {
			IArabicLangListener typedListener = listener as IArabicLangListener;
			if (typedListener != null) typedListener.EnterConst_def(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IArabicLangListener typedListener = listener as IArabicLangListener;
			if (typedListener != null) typedListener.ExitConst_def(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IArabicLangVisitor<TResult> typedVisitor = visitor as IArabicLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConst_def(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Const_defContext const_def() {
		Const_defContext _localctx = new Const_defContext(Context, State);
		EnterRule(_localctx, 8, RULE_const_def);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 117; Match(NAME_ID);
			State = 118; Match(ASSIGN);
			State = 119; const_value();
			State = 120; Match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Types_def_partContext : ParserRuleContext {
		public ITerminalNode KW_TYPE() { return GetToken(ArabicLangParser.KW_TYPE, 0); }
		public Type_defContext[] type_def() {
			return GetRuleContexts<Type_defContext>();
		}
		public Type_defContext type_def(int i) {
			return GetRuleContext<Type_defContext>(i);
		}
		public Types_def_partContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_types_def_part; } }
		public override void EnterRule(IParseTreeListener listener) {
			IArabicLangListener typedListener = listener as IArabicLangListener;
			if (typedListener != null) typedListener.EnterTypes_def_part(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IArabicLangListener typedListener = listener as IArabicLangListener;
			if (typedListener != null) typedListener.ExitTypes_def_part(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IArabicLangVisitor<TResult> typedVisitor = visitor as IArabicLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTypes_def_part(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Types_def_partContext types_def_part() {
		Types_def_partContext _localctx = new Types_def_partContext(Context, State);
		EnterRule(_localctx, 10, RULE_types_def_part);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 122; Match(KW_TYPE);
			State = 124;
			ErrorHandler.Sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					State = 123; type_def();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 126;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,4,Context);
			} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Type_defContext : ParserRuleContext {
		public ITerminalNode NAME_ID() { return GetToken(ArabicLangParser.NAME_ID, 0); }
		public ITerminalNode ASSIGN() { return GetToken(ArabicLangParser.ASSIGN, 0); }
		public Complex_typeContext complex_type() {
			return GetRuleContext<Complex_typeContext>(0);
		}
		public ITerminalNode SEMICOLON() { return GetToken(ArabicLangParser.SEMICOLON, 0); }
		public Type_defContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_type_def; } }
		public override void EnterRule(IParseTreeListener listener) {
			IArabicLangListener typedListener = listener as IArabicLangListener;
			if (typedListener != null) typedListener.EnterType_def(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IArabicLangListener typedListener = listener as IArabicLangListener;
			if (typedListener != null) typedListener.ExitType_def(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IArabicLangVisitor<TResult> typedVisitor = visitor as IArabicLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitType_def(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Type_defContext type_def() {
		Type_defContext _localctx = new Type_defContext(Context, State);
		EnterRule(_localctx, 12, RULE_type_def);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 128; Match(NAME_ID);
			State = 129; Match(ASSIGN);
			State = 130; complex_type();
			State = 131; Match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Complex_typeContext : ParserRuleContext {
		public Record_typeContext record_type() {
			return GetRuleContext<Record_typeContext>(0);
		}
		public List_typeContext list_type() {
			return GetRuleContext<List_typeContext>(0);
		}
		public Complex_typeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_complex_type; } }
		public override void EnterRule(IParseTreeListener listener) {
			IArabicLangListener typedListener = listener as IArabicLangListener;
			if (typedListener != null) typedListener.EnterComplex_type(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IArabicLangListener typedListener = listener as IArabicLangListener;
			if (typedListener != null) typedListener.ExitComplex_type(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IArabicLangVisitor<TResult> typedVisitor = visitor as IArabicLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitComplex_type(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Complex_typeContext complex_type() {
		Complex_typeContext _localctx = new Complex_typeContext(Context, State);
		EnterRule(_localctx, 14, RULE_complex_type);
		try {
			State = 135;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case KW_RECORD:
				EnterOuterAlt(_localctx, 1);
				{
				State = 133; record_type();
				}
				break;
			case KW_LIST:
				EnterOuterAlt(_localctx, 2);
				{
				State = 134; list_type();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
